# aginiti-redteam

./: .env.example  .gitignore  CLAUDE.md  README.md  package-lock.json  package.json  pyproject.toml
aginiti/attacks/: base.py
aginiti/attacks/dra/: README.md  __init__.py  ikea.py
aginiti/connectors/: embedding.py  endpoint.py
aginiti/instrument/: __init__.py
aginiti/reporting/: __init__.py  markdown_report.py
benchmarks/dev_fixtures/agents/reference_agent_blackbox/: agent.py  main.py  seed.py
benchmarks/dev_fixtures/agents/reference_agent_otel/: agent.py  main.py  otel_setup.py  seed.py
benchmarks/dev_fixtures/datasets/: ground_truth.json  seed_data.py
benchmarks/scaled_evals/: __init__.py
benchmarks/scaled_evals/agents/: __init__.py
benchmarks/scaled_evals/agents/healthcare_agent/: __init__.py  agent.py  main.py  seed.py
benchmarks/scaled_evals/datasets/: __init__.py  prepare_healthcare.py
benchmarks/scaled_evals/results/: ikea_healthcare_50q_20260714T025637Z.json  ikea_healthcare_50q_20260714T025637Z.md
docs/: benchmarking.md  dev_setup.md  project-overview.md
scripts/: run_benchmark.py  run_healthcare_benchmark.py  run_ikea.py
tests/: test_base.py  test_endpoint.py  test_ikea.py  test_markdown_report.py  test_run_benchmark_metrics.py
